revert default social-buttons to white on dark background, with option for dark on light background

--- a/_includes/elements/social-media.html
+++ b/_includes/elements/social-media.html
@@ -1,5 +1,5 @@
 <ul class="social">
-  <!-- Regular Buttons -->
+  <!-- white on dark bg -->
   <li class="social-button"><a href="#" title="Official U.S. Army Facebook"><i class="armyicons-sm_facebook"></i></a></li>
   <li class="social-button"><a href="#" title="Official U.S. Army Twitter"><i class="armyicons-sm_x"></i></a></li>
   <li class="social-button"><a href="#" title="Official U.S. Army Pinterest"><i class="armyicons-sm_pinterest"></i></a></li>
@@ -25,33 +25,33 @@
   <li class="social-button"><a href="#" title="Official U.S. Army Tumblr"><i class="armyicons-sm_tumblr"></i></a></li>
 </ul>
 <ul class="social">
-  <!-- Regular White Buttons -->
-  <li class="social-button-white"><a href="#" title="Official U.S. Army Facebook"><i class="armyicons-sm_facebook"></i></a></li>
-  <li class="social-button-white"><a href="#" title="Official U.S. Army Twitter"><i class="armyicons-sm_x"></i></a></li>
-  <li class="social-button-white"><a href="#" title="Official U.S. Army Pinterest"><i class="armyicons-sm_pinterest"></i></a></li>
-  <li class="social-button-white"><a href="#" title="Official U.S. Army Flickr"><i class="armyicons-sm_flickr3"></i></a></li>
-  <li class="social-button-white"><a href="#" title="Official U.S. Army Slideshare"><i class="armyicons-sm_slideshare"></i></a></li>
-  <li class="social-button-white"><a href="#" title="Official U.S. Army Youtube"><i class="armyicons-sm_youtube"></i></a></li>
-  <li class="social-button-white"><a href="#" title="Official U.S. Army Instagram"><i class="armyicons-sm_instagram"></i></a></li>
-  <li class="social-button-white"><a href="#" title="Official U.S. Army Vimeo"><i class="armyicons-sm_vimeo"></i></a></li>
-  <li class="social-button-white"><a href="#" title="Official U.S. Army Linkedin"><i class="armyicons-sm_linkedin2"></i></a></li>
-  <!-- <li class="social-button-white"><a href="#" title="Official U.S. Army Army Live Blog"><i class="armyicons-sm_armylive"></i></a></li> -->
-  <!-- <li class="social-button-white"><a href="#" title="Official U.S. Army Snapchat"><i class="armyicons-sm_snapchat"></i></a></li> -->
-  <li class="social-button-white"><a href="#" title="Official U.S. Army Email"><i class="armyicons-contact"></i></a></li>
-  <li class="social-button-white"><a href="#" title="Official U.S. Army Reddit"><i class="armyicons-sm_reddit"></i></a></li>
-  <!-- <li class="social-button-white"><a href="#" title="Official U.S. Army USTREAM"><i class="armyicons-sm_ustream"></i></a></li> -->
-  <!-- <li class="social-button-white"><a href="#" title="Official U.S. Army SmugMug"><i class="armyicons-sm_smugmug"></i></a></li> -->
-  <!-- <li class="social-button-white"><a href="#" title="Official U.S. Army issuu"><i class="armyicons-sm_issuu"></i></a></li> -->
-  <!-- <li class="social-button-white"><a href="#" title="Official U.S. Army Google Maps"><i class="armyicons-sm_periscope"></i></a></li> -->
-  <!-- <li class="social-button-white"><a href="#" title="Official U.S. Army Blogger"><i class="armyicons-sm_blogger"></i></a></li> -->
-  <li class="social-button-white"><a href="#" title="Official U.S. Army RSS"><i class="armyicons-rss"></i></a></li>
-  <li class="social-button-white"><a href="#" title="Official U.S. Army Soundcloud"><i class="armyicons-sm_soundcloud"></i></a></li>
-  <li class="social-button-white"><a href="#" title="Official U.S. Threads"><i class="armyicons-sm_threads"></i></a></li>
-  <li class="social-button-white"><a href="#" title="Official U.S. Army Sprinklr"><i class="armyicons-sm_sprinklr"></i></a></li>
-  <li class="social-button-white"><a href="#" title="Official U.S. Army Tumblr"><i class="armyicons-sm_tumblr"></i></a></li>
+  <!-- black on light bg -->
+  <li class="social-button-black"><a href="#" title="Official U.S. Army Facebook"><i class="armyicons-sm_facebook"></i></a></li>
+  <li class="social-button-black"><a href="#" title="Official U.S. Army Twitter"><i class="armyicons-sm_x"></i></a></li>
+  <li class="social-button-black"><a href="#" title="Official U.S. Army Pinterest"><i class="armyicons-sm_pinterest"></i></a></li>
+  <li class="social-button-black"><a href="#" title="Official U.S. Army Flickr"><i class="armyicons-sm_flickr3"></i></a></li>
+  <li class="social-button-black"><a href="#" title="Official U.S. Army Slideshare"><i class="armyicons-sm_slideshare"></i></a></li>
+  <li class="social-button-black"><a href="#" title="Official U.S. Army Youtube"><i class="armyicons-sm_youtube"></i></a></li>
+  <li class="social-button-black"><a href="#" title="Official U.S. Army Instagram"><i class="armyicons-sm_instagram"></i></a></li>
+  <li class="social-button-black"><a href="#" title="Official U.S. Army Vimeo"><i class="armyicons-sm_vimeo"></i></a></li>
+  <li class="social-button-black"><a href="#" title="Official U.S. Army Linkedin"><i class="armyicons-sm_linkedin2"></i></a></li>
+  <!-- <li class="social-button-black"><a href="#" title="Official U.S. Army Army Live Blog"><i class="armyicons-sm_armylive"></i></a></li> -->
+  <!-- <li class="social-button-black"><a href="#" title="Official U.S. Army Snapchat"><i class="armyicons-sm_snapchat"></i></a></li> -->
+  <li class="social-button-black"><a href="#" title="Official U.S. Army Email"><i class="armyicons-contact"></i></a></li>
+  <li class="social-button-black"><a href="#" title="Official U.S. Army Reddit"><i class="armyicons-sm_reddit"></i></a></li>
+  <!-- <li class="social-button-black"><a href="#" title="Official U.S. Army USTREAM"><i class="armyicons-sm_ustream"></i></a></li> -->
+  <!-- <li class="social-button-black"><a href="#" title="Official U.S. Army SmugMug"><i class="armyicons-sm_smugmug"></i></a></li> -->
+  <!-- <li class="social-button-black"><a href="#" title="Official U.S. Army issuu"><i class="armyicons-sm_issuu"></i></a></li> -->
+  <!-- <li class="social-button-black"><a href="#" title="Official U.S. Army Google Maps"><i class="armyicons-sm_periscope"></i></a></li> -->
+  <!-- <li class="social-button-black"><a href="#" title="Official U.S. Army Blogger"><i class="armyicons-sm_blogger"></i></a></li> -->
+  <li class="social-button-black"><a href="#" title="Official U.S. Army RSS"><i class="armyicons-rss"></i></a></li>
+  <li class="social-button-black"><a href="#" title="Official U.S. Army Soundcloud"><i class="armyicons-sm_soundcloud"></i></a></li>
+  <li class="social-button-black"><a href="#" title="Official U.S. Threads"><i class="armyicons-sm_threads"></i></a></li>
+  <li class="social-button-black"><a href="#" title="Official U.S. Army Sprinklr"><i class="armyicons-sm_sprinklr"></i></a></li>
+  <li class="social-button-black"><a href="#" title="Official U.S. Army Tumblr"><i class="armyicons-sm_tumblr"></i></a></li>
 </ul>
 <ul class="social color-icon">
-  <!-- Regular Buttons -->
+  <!-- official colors (white default) on dark bg -->
   <li class="social-button"><a href="#" title="Official U.S. Army Facebook"><i class="armyicons-sm_facebook"></i></a></li>
   <li class="social-button"><a href="#" title="Official U.S. Army Twitter"><i class="armyicons-sm_x"></i></a></li>
   <li class="social-button"><a href="#" title="Official U.S. Army Pinterest"><i class="armyicons-sm_pinterest"></i></a></li>
@@ -78,54 +78,28 @@
 </ul>
 
 <ul class="social color-icon">
-  <!-- Regular Buttons Spans -->
-  <li class="social-button facebook-button"><a href="#" title="Official U.S. Army Facebook"><span></span></a></li>
-  <li class="social-button x-button"><a href="#" title="Official U.S. Army Twitter"><span></span></a></li>
-  <li class="social-button pinterest-button"><a href="#" title="Official U.S. Army Pinterest"><span></span></a></li>
-  <li class="social-button flickr-button"><a href="#" title="Official U.S. Army Flickr"><span></span></a></li>
-  <li class="social-button slideshare-button"><a href="#" title="Official U.S. Army Slideshare"><span></span></a></li>
-  <li class="social-button youtube-button"><a href="#" title="Official U.S. Army Youtube"><span></span></a></li>
-  <li class="social-button instagram-button"><a href="#" title="Official U.S. Army Instagram"><span></span></a></li>
-  <li class="social-button vimeo-button"><a href="#" title="Official U.S. Army Vimeo"><span></span></a></li>
-  <li class="social-button linkedin-button"><a href="#" title="Official U.S. Army Linkedin"><span></span></a></li>
-  <!-- <li class="social-button armylive-button"><a href="#" title="Official U.S. Army Army Live Blog"><span></span></a></li> -->
-  <!-- <li class="social-button snapchat-button"><a href="#" title="Official U.S. Army Snapchat"><span></span></a></li> -->
-  <li class="social-button contact-button"><a href="#" title="Official U.S. Army Email"><span></span></a></li>
-  <li class="social-button reddit-button"><a href="#" title="Official U.S. Army Reddit"><span></span></a></li>
-  <!-- <li class="social-button ustream-button"><a href="#" title="Official U.S. Army USTREAM"><span></span></a></li> -->
-  <!-- <li class="social-button smugmug-button"><a href="#" title="Official U.S. Army SmugMug"><span></span></a></li> -->
-  <!-- <li class="social-button issuu-button"><a href="#" title="Official U.S. Army issuu"><span></span></a></li> -->
-  <!-- <li class="social-button periscope-button"><a href="#" title="Official U.S. Army Google Maps"><span></span></a></li> -->
-  <!-- <li class="social-button blogger-button"><a href="#" title="Official U.S. Army Blogger"><span></span></a></li> -->
-  <li class="social-button rss-button"><a href="#" title="Official U.S. Army RSS"><span></span></a></li>
-  <li class="social-button soundcloud-button"><a href="#" title="Official U.S. Army Soundcloud"><span></span></a></li>
-  <li class="social-button threads-button"><a href="#" title="Official U.S. Army Threads"><span></span></a></li>
-  <li class="social-button sprinklr-button"><a href="#" title="Official U.S. Army Sprinklr"><span></span></a></li>
-  <li class="social-button tumblr-button"><a href="#" title="Official U.S. Army Tumblr"><span></span></a></li>
-</ul>
-<ul class="social color-icon">
-  <!-- Regular White Buttons -->
-  <li class="social-button-white"><a href="#" title="Official U.S. Army Facebook"><i class="armyicons-sm_facebook"></i></a></li>
-  <li class="social-button-white"><a href="#" title="Official U.S. Army Twitter"><i class="armyicons-sm_x"></i></a></li>
-  <li class="social-button-white"><a href="#" title="Official U.S. Army Pinterest"><i class="armyicons-sm_pinterest"></i></a></li>
-  <li class="social-button-white"><a href="#" title="Official U.S. Army Flickr"><i class="armyicons-sm_flickr3"></i></a></li>
-  <li class="social-button-white"><a href="#" title="Official U.S. Army Slideshare"><i class="armyicons-sm_slideshare"></i></a></li>
-  <li class="social-button-white"><a href="#" title="Official U.S. Army Youtube"><i class="armyicons-sm_youtube"></i></a></li>
-  <li class="social-button-white"><a href="#" title="Official U.S. Army Instagram"><i class="armyicons-sm_instagram"></i></a></li>
-  <li class="social-button-white"><a href="#" title="Official U.S. Army Vimeo"><i class="armyicons-sm_vimeo"></i></a></li>
-  <li class="social-button-white"><a href="#" title="Official U.S. Army Linkedin"><i class="armyicons-sm_linkedin2"></i></a></li>
-  <!-- <li class="social-button-white"><a href="#" title="Official U.S. Army Army Live Blog"><i class="armyicons-sm_armylive"></i></a></li> -->
-  <!-- <li class="social-button-white"><a href="#" title="Official U.S. Army Snapchat"><i class="armyicons-sm_snapchat"></i></a></li> -->
-  <li class="social-button-white"><a href="#" title="Official U.S. Army Email"><i class="armyicons-contact"></i></a></li>
-  <li class="social-button-white"><a href="#" title="Official U.S. Army Reddit"><i class="armyicons-sm_reddit"></i></a></li>
-  <!-- <li class="social-button-white"><a href="#" title="Official U.S. Army USTREAM"><i class="armyicons-sm_ustream"></i></a></li> -->
-  <!-- <li class="social-button-white"><a href="#" title="Official U.S. Army SmugMug"><i class="armyicons-sm_smugmug"></i></a></li> -->
-  <!-- <li class="social-button-white"><a href="#" title="Official U.S. Army issuu"><i class="armyicons-sm_issuu"></i></a></li> -->
-  <!-- <li class="social-button-white"><a href="#" title="Official U.S. Army Google Maps"><i class="armyicons-sm_periscope"></i></a></li> -->
-  <!-- <li class="social-button-white"><a href="#" title="Official U.S. Army Blogger"><i class="armyicons-sm_blogger"></i></a></li> -->
-  <li class="social-button-white"><a href="#" title="Official U.S. Army RSS"><i class="armyicons-rss"></i></a></li>
-  <li class="social-button-white"><a href="#" title="Official U.S. Army Soundcloud"><i class="armyicons-sm_soundcloud"></i></a></li>
-  <li class="social-button-white"><a href="#" title="Official U.S. Army Threads"><i class="armyicons-sm_threads"></i></a></li>
-  <li class="social-button-white"><a href="#" title="Official U.S. Army Sprinklr"><i class="armyicons-sm_sprinklr"></i></a></li>
-  <li class="social-button-white"><a href="#" title="Official U.S. Army Tumblr"><i class="armyicons-sm_tumblr"></i></a></li>
+  <!-- official colors (black default) on light bg -->
+  <li class="social-button-black facebook-button"><a href="#" title="Official U.S. Army Facebook"><span></span></a></li>
+  <li class="social-button-black x-button"><a href="#" title="Official U.S. Army Twitter"><span></span></a></li>
+  <li class="social-button-black pinterest-button"><a href="#" title="Official U.S. Army Pinterest"><span></span></a></li>
+  <li class="social-button-black flickr-button"><a href="#" title="Official U.S. Army Flickr"><span></span></a></li>
+  <li class="social-button-black slideshare-button"><a href="#" title="Official U.S. Army Slideshare"><span></span></a></li>
+  <li class="social-button-black youtube-button"><a href="#" title="Official U.S. Army Youtube"><span></span></a></li>
+  <li class="social-button-black instagram-button"><a href="#" title="Official U.S. Army Instagram"><span></span></a></li>
+  <li class="social-button-black vimeo-button"><a href="#" title="Official U.S. Army Vimeo"><span></span></a></li>
+  <li class="social-button-black linkedin-button"><a href="#" title="Official U.S. Army Linkedin"><span></span></a></li>
+  <!-- <li class="social-button-black armylive-button"><a href="#" title="Official U.S. Army Army Live Blog"><span></span></a></li> -->
+  <!-- <li class="social-button-black snapchat-button"><a href="#" title="Official U.S. Army Snapchat"><span></span></a></li> -->
+  <li class="social-button-black contact-button"><a href="#" title="Official U.S. Army Email"><span></span></a></li>
+  <li class="social-button-black reddit-button"><a href="#" title="Official U.S. Army Reddit"><span></span></a></li>
+  <!-- <li class="social-button-black ustream-button"><a href="#" title="Official U.S. Army USTREAM"><span></span></a></li> -->
+  <!-- <li class="social-button-black smugmug-button"><a href="#" title="Official U.S. Army SmugMug"><span></span></a></li> -->
+  <!-- <li class="social-button-black issuu-button"><a href="#" title="Official U.S. Army issuu"><span></span></a></li> -->
+  <!-- <li class="social-button-black periscope-button"><a href="#" title="Official U.S. Army Google Maps"><span></span></a></li> -->
+  <!-- <li class="social-button-black blogger-button"><a href="#" title="Official U.S. Army Blogger"><span></span></a></li> -->
+  <li class="social-button-black rss-button"><a href="#" title="Official U.S. Army RSS"><span></span></a></li>
+  <li class="social-button-black soundcloud-button"><a href="#" title="Official U.S. Army Soundcloud"><span></span></a></li>
+  <li class="social-button-black threads-button"><a href="#" title="Official U.S. Army Threads"><span></span></a></li>
+  <li class="social-button-black sprinklr-button"><a href="#" title="Official U.S. Army Sprinklr"><span></span></a></li>
+  <li class="social-button-black tumblr-button"><a href="#" title="Official U.S. Army Tumblr"><span></span></a></li>
 </ul>
